--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         var y = Math.round(number / 4);
         if (y == 0) { y = 1 }
         var x = number - (y - 1) * 4;
+        if (x == 5) { x = 1; y++ }
+        console.log(x, y, number[0]);
         return $('#viewport>.img').clone().css({
           top: - top_c(y),
           left: - left_c(x),
